<resources>
    <string name="app_name">GuiaTuristica</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo">Titulo</string>
    <string name="titulo_lugar">Pereira</string>
    <string name="pereira">pereira</string>
    <string name="detalle">Detalle:</string>
    <string name="detalles_texto">Es un puente atirantado que une a la ciudad de Pereira con el municipio de Dosquebradas atravesando el valle del río Otún, en del Área Metropolitana de Centro Occidente, en Risaralda, Colombia. Se considera una de las obras viales más importantes de Colombia</string>
    <string name="ubicacion">Ubicación:</string>
    <string name="ubucacion_texto">Pereira y Dos Quebradas</string>
    <string name="puntuacion">Puntuacion:</string>
    <string name="puntuacion_valor">5</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="notifications">Notificaciones</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="preferences">Preferencias</string>

</resources>