<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".detalle.DetalleActivity">

        <TextView
            android:id="@+id/titulo_lugar"
            style="@style/Titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/titulo_lugar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_lugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/pereira"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titulo_lugar"
            app:srcCompat="@drawable/pereira2"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/detalle_lugar2"
            style="@style/Sub_Titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/detalle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_lugar" />

        <TextView
            android:id="@+id/detalle_lugar_texto"
            style="@style/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/detalles_texto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detalle_lugar2" />

        <TextView
            android:id="@+id/ubicacion_lugar"
            style="@style/Sub_Titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/ubicacion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detalle_lugar_texto" />

        <TextView
            android:id="@+id/ubicacion_lugar_texto"
            style="@style/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/ubucacion_texto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ubicacion_lugar" />

        <TextView
            android:id="@+id/puntuacion_lugar"
            style="@style/Sub_Titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/puntuacion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ubicacion_lugar_texto" />

        <TextView
            android:id="@+id/puntuacion_lugar_valor"
            style="@style/Sub_Titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/puntuacion_valor"
            app:layout_constraintStart_toEndOf="@+id/puntuacion_lugar"
            app:layout_constraintTop_toBottomOf="@+id/ubicacion_lugar_texto" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>